src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700;800&display=swap');
@import "tailwindcss";

@theme {
  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif;
  --font-display: "Outfit", sans-serif;
  
  --color-brand-50: #f0f9ff;
  --color-brand-100: #e0f2fe;
  --color-brand-500: #0ea5e9;
  --color-brand-600: #0284c7;
  --color-brand-700: #0369a1;
  
  --color-accent-500: #6366f1;
  --color-accent-600: #4f46e5;
}

@layer base {
  body {
    @apply text-slate-200 font-sans antialiased;
    background: #41295a;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to bottom, #2F0743, #41295a);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to bottom, #2F0743, #41295a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

    background-attachment: fixed;
  } 
  
  body::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-image: url('/img/estrella_yeksemeneb_blanca.svg');
    background-size: 576px;
    background-repeat: no-repeat;
    background-position: center;
    z-index: 1;
    pointer-events: none;
    opacity: 0.15;
  }
  
  h1, h2, h3, h4, h5, h6 {
    @apply font-display tracking-tight text-white;
  }
}

.glass {
  @apply bg-[#020617]/80 backdrop-blur-md border border-white/10;
}

.text-gradient {
  @apply bg-clip-text text-transparent bg-gradient-to-r from-brand-600 to-accent-600;
}

